--- a/ios/frontend/Info.plist
+++ b/ios/frontend/Info.plist
@@ -57,6 +57,8 @@
 		<string>Lato-Regular.ttf</string>
 		<string>Roboto-Light.ttf</string>
 		<string>Roboto-Regular.ttf</string>
+		<string>Lato-Bold.ttf</string>
+		<string>Roboto-Medium.ttf</string>
 	</array>
 </dict>
 </plist>
